# cppAssetPacker

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/glob_selector/: CMakeLists.txt  glob_selector.cpp
src/gltf_loader/: CMakeLists.txt  asset_loader.cpp
src/include/glob_selector/: glob_selector.hpp
src/include/gltf_loader/: asset_loader.hpp  gltf_loader.hpp  types.hpp
src/lib1/: CMakeLists.txt
tests/: CMakeLists.txt  example_tests.cpp
